@@ -26,37 +26,20 @@
 
 #-- imports
 import os
+import os.path
 import sys
 
-import imp
-try:
-   mfile, mpath, mdesc = imp.find_module('Config', ['../bind2nsd'])
-   imp.load_module('Config', mfile, mpath, mdesc)
+if os.path.exists('../bind2nsd/Config.py'):
+   sys.path.append('../bind2nsd')
    from Config import *
-except ImportError, ie:
-   from bind2nsd.Config import *
-
-try:
-   mfile, mpath, mdesc = imp.find_module('NamedConf', ['../bind2nsd'])
-   imp.load_module('NamedConf', mfile, mpath, mdesc)
    from NamedConf import *
-except ImportError, ie:
-   from bind2nsd.NamedConf import *
-
-try:
-   mfile, mpath, mdesc = imp.find_module('NsdConf', ['../bind2nsd'])
-   imp.load_module('NsdConf', mfile, mpath, mdesc)
    from NsdConf import *
-except ImportError, ie:
-   from bind2nsd.NsdConf import *
-
-try:
-   mfile, mpath, mdesc = imp.find_module('Utils', ['../bind2nsd'])
-   imp.load_module('Utils', mfile, mpath, mdesc)
    from Utils import *
-except ImportError, ie:
+else:
+   from bind2nsd.Config import *
+   from bind2nsd.NamedConf import *
+   from bind2nsd.NsdConf import *
    from bind2nsd.Utils import *
-
 
 #-- globals
 conf = Config()
